tests/ui/missing/missing-items/missing-type-parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:4:5
   |
LL |     foo();
   |     ^^^ cannot infer type of the type parameter `X` declared on the function `foo`
   |
help: consider specifying a concrete type for the generic type `X`
   |
LL |     foo::<SomeConcreteType>();
   |        ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
